<resources>
    <string name="app_name">Witcom</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_feeds">Feeds</string>
    <string name="logo">WITCOM</string>
    <string name="title_place_list"></string>
    <string name="title_place_detail">Place detail</string>
    <string name="title_conference_list">Program</string>
    <string name="title_conference_detail">Event Detail</string>
    <string name="title_workshop_list">Workshops</string>
    <string name="title_workshop_detail">Workshop Detail</string>

    <string name="tourism">Places of interest</string>
    <string name="speakers">Speakers</string>
    <string name="conferences">Program</string>
    <string name="workshops">Activities</string>
    <string name="how_to_arrive">How to arrive</string>
    <string name="sketch">Sketch</string>

    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="schedule">Program</string>
    <string name="navigate">Navigate</string>
    <string name="title_activity_witcom_program">Program</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_witcom_workshop">Workshop</string>

    <string name="about">: ABOUT</string>
    <string name="collaborators">{ COLLABORATORS }</string>

    <string name="organizers">{ ORGANIZERS }</string>
    <string name="miguel_felix">>_ Dr. Miguel Félix Mata Rivera</string>
    <string name="carlos_nava">>_ M. en C. Carlos Hernández Nava</string>
    <string name="miguel_alejandro">>_ M. en C. Miguel Alejandro Martínez Rosales</string>

    <string name="developers">{ Developers }</string>
    <string name="edgar_hernandez">>_ Edgar Hernández Solís</string>
    <string name="oscar_lemus">>_ Oscar Alejandro Lemus Pichardo</string>
    <string name="miguel_maldonado">>_ Miguel Armando Maldonado Vázquez</string>

    <string name="navigation">Navigation</string>
    <string name="how_get">How would you get there?</string>
    <string name="data_usage">This option can consume data</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="car">Car</string>
    <string name="bicycle">Bicycle</string>
    <string name="walking">Walking</string>

    <string name="silao_address">UPIIG.-Av. Mineral de Valenciana No. 200 Col. Fracc. Industrial Puerto Interior, C.P. 36275 Silao de la Victoria, Guanajuato México \nTel. (472) 74 84638 Conmutador: (55) 57 29 6000 Ext. 81301 \nFax: 81450, \nCorreo Electrónico: upiig@ipn.mx </string>

    <string name="transition_pager">transition_pager</string>
    <string name="transition_city">transition_city</string>
    <string name="transition_place">transition_place</string>
    <string name="transition_workshop">transition_workshop</string>
    <string name="transition_conference">transition_conference</string>

    <string name="updating">Updating</string>
    <string name="wait">Please wait a moment</string>
    <string name="update">Update</string>
    <string name="geofence">Location alerts</string>

    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="about_details">About</string>
    <string name="place">Place</string>
    <string name="monitor">Monitor</string>
    <string name="notes">Notes</string>
    <string name="author">Speaker</string>
    <string name="from">From</string>

    <string name="no_connection">You have not Internet access</string>

    <string name="update_content">Please update the\ncontent (menu)</string>

    <string name="title_activity_streaming">StreamingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="stream">Streaming</string>

    <string name="hq">High Quality</string>
    <string name="lq">Low Quality</string>

    <string name="update_request">Please update the content</string>
    <string name="update_message">New content is available</string>

    <string name="rate">Rate</string>
    <string name="notAttend">I did not\nattend</string>

    <string name="sponsor">Sponsors \u0026 About</string>
    <string name="sponsors">{ SPONSORS }</string>

    <string name="upiig">{ CEC IPN, CANCÚN }</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="witcom_address">Blvd. Kukulcán Km. 12.5, Centro Empresarial Cancún Torre "A" Primer Piso,\nZona Hotelera, Cancún, Quintana Roo. C.P. 77500.</string>
    <string name="witcom_telephone">Tels: +52 (998) 176 8165, \n884 5161, \n884 4879, \n176 8233 y \n176 8175</string>
    <string name="witcom_email">upiig@ipn.mx</string>

    <string name="leave_comment">Please, leave a comment</string>

    <string name="thank_you">Thank you</string>

    <string name="rate_conference">Tap to rate the conference</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <string name="title_activity_new_event">NewEventActivity</string>

    <string name="swapEvent">Connect with other event</string>

    <string name="selectEvent">Select an event to download its content</string>
    <string name="pagerIndicator">Select and discover new sections</string>
    <string name="updateIndicator">Indicates that the data has been updated</string>
    <string name="pagerAction">Swipe and discover</string>

    <string name="activityPlace">Place</string>
    <string name="speaker_content_descriptor">Speaker</string>
</resources>
