<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_title"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/conference"
            android:id="@+id/rating_image"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rating_title"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_bar"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/rating_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            style="@android:style/Widget.Material.RatingBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_comment"
            android:id="@+id/rating_leave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rating_comment"
            app:layout_constraintTop_toBottomOf="@+id/rating_leave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <Button
            android:text="@string/notAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_cancel"
            app:layout_constraintLeft_toLeftOf="@+id/rating_comment"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rating_comment"
            style="@android:style/Widget.Material.Button.Borderless"
            android:elevation="0dp" />

        <Button
            android:text="@string/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_ok"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rating_comment"
            app:layout_constraintRight_toRightOf="@+id/rating_comment"
            style="@android:style/Widget.Material.Button.Borderless" />
    </android.support.constraint.ConstraintLayout>

    </ScrollView>