<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/custWhite"
                    android:text="@string/sponsors"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/custWhite"/>

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:radius="6dp"
                    app:slideInterval="1500"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp"/>

                <!--
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sponsorsRecycler"/>-->

                <!--<TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1,2">

                    <TableRow>

                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/upiita"
                            android:layout_gravity="center"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/upiigsf_opt"
                            android:layout_gravity="center"
                            android:layout_column="1"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/labmovil"
                            android:layout_gravity="center"
                            android:layout_column="2"/>

                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/toga_university"
                            android:layout_span="3"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"/>

                    </TableRow>
                </TableLayout>-->

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimaryDark"
                android:textSize="40sp"
                android:layout_gravity="left|center"
                android:id="@+id/about_about"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="This is WITCOM 2017
International Congress on Telematics, Computing and Communications"
                    android:textColor="@color/custWhite" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/witcomlogo" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/custWhite"
                android:gravity="center"
                android:text="WITCOM aims bringing together researchers, developers, users, entrepreneurs and practitioners to discuss and present trend topics and novelty systems based on {telematics}, {computing} and {communications}, fostering interdisciplinary discussions and research in all aspects of Telematics."/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/witcom3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upiig"
                    android:textColor="@color/custWhite"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/custWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/witcom_address"
                    android:textSize="12sp"
                    android:textColor="@color/custWhite"
                    android:textIsSelectable="true"
                    android:layout_marginStart="48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/witcom_telephone"
                    android:textSize="12sp"
                    android:textColor="@color/custWhite"
                    android:textIsSelectable="true"
                    android:layout_marginStart="48dp"/>

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/witcom_email"
                    android:textSize="12sp"
                    android:textColor="@color/custWhite"
                    android:textIsSelectable="true"
                    android:layout_marginStart="48dp"/>-->

            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/custWhite"
                    android:text="@string/collaborators"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/custWhite"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1,2">

                    <TableRow>

                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/umayor_pie"
                            android:layout_gravity="center"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/cinvestav"
                            android:layout_gravity="center"
                            android:layout_column="1"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/upiigsf_opt"
                            android:layout_gravity="center"
                            android:layout_column="2"/>

                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/upiita"
                            android:layout_gravity="center"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/cisco"
                            android:layout_gravity="center"
                            android:layout_column="1"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/oracle"
                            android:layout_gravity="center"
                            android:layout_column="2"/>

                    </TableRow>

                    <TableRow>

                        <View/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/ipn"
                            android:layout_gravity="center"
                            android:layout_column="1"/>
                        <View/>

                    </TableRow>
                </TableLayout>

            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/textAccent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/organizers"
                    android:textColor="@color/custWhite"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/custWhite"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/chairsRecycler"/>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/migfel"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/miguel_felix"
                        android:textColor="@color/custWhite"
                        android:textSize="25sp"
                        android:layout_gravity="start"
                        android:id="@+id/felix"
                        android:layout_marginStart="10dp"
                        android:onClick="sendMail"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/nava"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/carlos_nava"
                        android:textColor="@color/custWhite"
                        android:textSize="25sp"
                        android:layout_gravity="start"
                        android:id="@+id/nava"
                        android:layout_marginStart="10dp"
                        android:onClick="sendMail"/>

                </LinearLayout>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developers"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/developersRecycler"/>

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/edgar_hernandez"-->
                    <!--android:textColor="@color/colorAccent"-->
                    <!--android:textSize="15sp"-->
                    <!--android:layout_gravity="left"-->
                    <!--android:id="@+id/edgar"-->
                    <!--android:onClick="sendMail"/>-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/oscar_lemus"-->
                    <!--android:textColor="@color/colorAccent"-->
                    <!--android:textSize="15sp"-->
                    <!--android:layout_gravity="left"-->
                    <!--android:id="@+id/lemus"-->
                    <!--android:onClick="sendMail"/>-->


                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/miguel_maldonado"-->
                    <!--android:textColor="@color/colorAccent"-->
                    <!--android:textSize="15sp"-->
                    <!--android:layout_gravity="left"-->
                    <!--android:id="@+id/mike"-->
                    <!--android:onClick="sendMail"/>-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/address"-->
                    <!--android:textSize="12sp"-->
                    <!--android:textColor="@color/colorAccent"/>-->

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="OK"
                android:id="@+id/dismiss"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>